asosiy kontent shakllantirildi

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
@@ -12,31 +13,47 @@
     <div class="container">
         <div class="dessert-cards">
             <div class="dessert-cards-item">
-                <img src="" alt="">
+                <img src="./img/dessert-1.jpg" alt="dessert-1">
                 <div class="dessert-info">
-                    <h4 class="dessert-title"></h4>
-                    <p class="dessert-retsept"></p>
+                    <h4 class="dessert-title">Dessert One</h4>
+                    <p class="dessert-retsept">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
+                        impedit sit itaque quas ipsum labore nesciunt aliquid laborum ullam. Nesciunt quos tempora non
+                        eum porro iste exercitationem enim eveniet?
+                    </p>
                 </div>
             </div>
             <div class="dessert-cards-item">
-                <img src="" alt="">
+                <img src="./img/dessert-2.jpg" alt="dessert-2">
                 <div class="dessert-info">
-                    <h4 class="dessert-title"></h4>
-                    <p class="dessert-retsept"></p>
+                    <h4 class="dessert-title">Dessert Two</h4>
+                    <p class="dessert-retsept">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
+                        impedit sit itaque quas ipsum labore nesciunt aliquid laborum ullam. Nesciunt quos tempora non
+                        eum porro iste exercitationem enim eveniet?
+                    </p>
                 </div>
             </div>
             <div class="dessert-cards-item">
-                <img src="" alt="">
+                <img src="./img/dessert-3.jpg" alt="dessert-3">
                 <div class="dessert-info">
-                    <h4 class="dessert-title"></h4>
-                    <p class="dessert-retsept"></p>
+                    <h4 class="dessert-title">Dessert Three</h4>
+                    <p class="dessert-retsept">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
+                        impedit sit itaque quas ipsum labore nesciunt aliquid laborum ullam. Nesciunt quos tempora non
+                        eum porro iste exercitationem enim eveniet?
+                    </p>
                 </div>
             </div>
             <div class="dessert-cards-item">
-                <img src="" alt="">
+                <img src="./img/dessert-4.jpg" alt="dessert-4">
                 <div class="dessert-info">
-                    <h4 class="dessert-title"></h4>
-                    <p class="dessert-retsept"></p>
+                    <h4 class="dessert-title">Dessert Four</h4>
+                    <p class="dessert-retsept">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
+                        impedit sit itaque quas ipsum labore nesciunt aliquid laborum ullam. Nesciunt quos tempora non
+                        eum porro iste exercitationem enim eveniet?
+                    </p>
                 </div>
             </div>
         </div>
