--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <p class="dessert-retsept">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
                         impedit sit itaque quas ipsum labore nesciunt aliquid laborum ullam. Nesciunt quos tempora non
-                        eum porro iste exercitationem enim eveniet?
+                        eum porro iste exercitationem enim?
                     </p>
                 </div>
             </div>
@@ -30,7 +30,7 @@
                     <p class="dessert-retsept">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
                         impedit sit itaque quas ipsum labore nesciunt aliquid laborum ullam. Nesciunt quos tempora non
-                        eum porro iste exercitationem enim eveniet?
+                        eum porro iste exercitationem enim?
                     </p>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                     <p class="dessert-retsept">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
                         impedit sit itaque quas ipsum labore nesciunt aliquid laborum ullam. Nesciunt quos tempora non
-                        eum porro iste exercitationem enim eveniet?
+                        eum porro iste exercitationem enim?
                     </p>
                 </div>
             </div>
@@ -52,7 +52,7 @@
                     <p class="dessert-retsept">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum
                         impedit sit itaque quas ipsum labore nesciunt aliquid laborum ullam. Nesciunt quos tempora non
-                        eum porro iste exercitationem enim eveniet?
+                        eum porro iste exercitationem enim?
                     </p>
                 </div>
             </div>
